--- a/client/src/constants/Navbar.css
+++ b/client/src/constants/Navbar.css
@@ -1,3 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Belgrano&display=swap");
+
+.belgrano-regular {
+  font-family: "Belgrano", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+
 .navbar > * {
     margin-right: 2rem;
     text-decoration: none;
@@ -7,12 +16,16 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: rgb(0, 0, 0);
     font-size: 30px;
     padding: 10px 0px;
 }
 
 a {
     text-decoration: none;
-    color: rgb(159, 166, 255);
+    color: rgb(255, 255, 255);
+    transition: 0.5s;
+}
+
+a:hover {
+    font-size: 33px;
 }
